# typer-extensions

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Justfile  Makefile  README.md  pyproject.toml
.github/workflows/: test.yaml
docs/: API_REFERENCE.md  BEST_PRACTICES.md  MIGRATION.md  TROUBLESHOOTING.md  USER_GUIDE.md
examples/: advanced_usage.py  argument_option_usage.py  basic_usage.py  help_formatting_usage.py  progammatic_usage.py  programmatic_usage.py
scripts/: clean.py  just_help.py  release.py
src/typer_aliases/: _version.py  core.py
src/typer_extensions/: __init__.py  _import_hook.py  _patch.py  _rich_utils.py  _version.py  core.py  format.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_argument.py  test_argument_option.py  test_basic.py  test_decorator_usage.py  test_help_formatting.py  test_option.py  test_programmatic_usage.py  test_real_world_cli.py  test_rich_utils.py  test_utility_functions.py
tests/unit/: __init__.py  test_core.py  test_decorator.py  test_format.py  test_import_hook.py  test_init.py  test_init_coverage.py  test_init_error_handling.py  test_init_module.py  test_init_module_edge_cases.py  test_patch.py  test_patch_edge_cases.py  test_programmatic_api.py  test_rich_utils.py  test_rich_utils_coverage.py  test_rich_utils_edge_cases.py  test_rich_utils_fallbacks.py  test_rich_utils_more_edge_cases.py  test_smoke.py  test_typer_compatibility.py
